2011-10-14  Vanessa Gil <vgil@artica.es>

	* include/js/jquery.autocomplete.js: Added file.

2011-10-13  Vanessa Gil <vgil@artica.es>

	* include/functions_html.php
	operation/todo/todo.php
	operation/incidents/incidents_detail.php
	operation/projects/people_manager.php
	include/styles/integria.css: Change users search.

2011-10-13  Sergio Martin <sergio.martin@artica.es>

	* integria_db.sql: Moved menu visability table from 
	enterpise code

2011-10-13  Sergio Martin <sergio.martin@artica.es>

	* include/config_process.php: Added missed changes from last
	commit

2011-10-13  Sergio Martin <sergio.martin@artica.es>

	* include/config_process.php
	operation/main_menu.php
	operation/side_menu.php: Added calendar, user info and tools side
	menus to visibility control hidden it when limited. Reorganize code

2011-10-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php
	operation/main_menu.php
	operation/side_menu.php: Added menu visibility control
	to side menu and clean main menu code

2011-10-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Fixed project trees changing
	from some requires to includes

2011-10-11  Sergio Martin <sergio.martin@artica.es>

	* operation/main_menu.php: Added calls to enterprise to 
	control visibility in main menu

2011-10-10  Vanessa Gil <vgil@artica.es>

	* operation/kb/browse.php: Fixed bad behaviour of the
	search of KB.

2011-10-07  Vanessa Gil <vgil@artica.es>

	* include/functions_html.php: modified combo box.

2011-10-06  Sergio Martin <sergio.martin@artica.es>

	* include/functions_form.php
	include/functions_config.php: Fixed quotes bug in functions_config
	and add an id to form in functions form to use it from jquery easily

2011-10-06  Sancho Lerena <slerena@artica.es>

    * include/functions_incidents.php: Added email_copy recipients when
    sending mails to spare email address included in the incident.

    * include/functions_db.php: Fixed a weird problem when create incidents